--- a/Ejercicios_JS/index.html
+++ b/Ejercicios_JS/index.html
@@ -8,37 +8,13 @@
 </head>
 <body>
     <!-- Primeros Ejercicios javascript -->
-    <script src="Ejercicios.js"></script> 
-    <!-- Ejercicio2-2 -->
-    <!-- <script src="./JS_EJ2_2.JS"></script> -->
-    <!-- Ejercicio2-3 -->
-    <!-- <script src="./JS_EJ2_3.JS"></script> -->
-    <!-- Ejercicio2-4 -->
-    <!-- <script src="./JS_EJ2_4.JS"></script> -->
-    <!-- Ejercicio2-5 -->
-    <!-- <script src="./JS_EJ2_5.JS"></script> -->
-    <!-- Ejercicio6 -->
-    <!-- <script src="./JS_EJ2_6.JS"></script> -->
-    <!-- Ejericio7 -->
-    <!-- <script src="./JS_EJ2_7.JS"></script> -->
-    <!-- Ejercicio8 -->
-    <!-- <script src="./JS_EJ2_8.JS"></script> -->
-    <!-- Ejercicio9 -->
-    <!-- <script src="./JS_EJ2_9.JS"></script> -->
-    <!-- Ejercicio10 VER -->
-    <!-- <script src="./JS_EJ2_10.JS"></script> -->
-    <!-- Ejericicio11 -->
-    <!-- <script src="./JS_EJ2_11.JS"></script> -->
-    <!-- Ejercicio12 -->
-    <!-- <script src="./JS_EJ2_12.JS"></script> -->
-     <!-- Ejercicio13 -->
-    <!-- <script src="./JS_EJ2_13.JS"></script> -->
-     <!-- Ejercicio14 -->
-    <!-- <script src="./JS_EJ2_14.JS"></script> -->
-     <!-- Ejercicio15 -->
-    <!-- <script src="./JS_EJ2_15.JS"></script> -->
-     <!-- Ejercicio16 -->
-    <script src="./JS_EJ2_16.JS"></script>
+    <!--<script src="Ejercicios.js"></script> --> 
+    <!-- Ejercicio2-1 -->
+    <!-- <script src="/Ejercicio_1.js"></script> -->
+    <!-- <script src="/Ejercicio_2.js"></script> -->
+    <script src="/Ejercicio_3.js"></script> 
+    
+
     
 </body>
 </html>
