--- a/Ejercicios_JS/index.html
+++ b/Ejercicios_JS/index.html
@@ -13,13 +13,13 @@
     <!-- <script src="/Ejercicio_1.js"></script> -->
     <!-- <script src="/Ejercicio_2.js"></script> -->
     <!--<script src="/Ejercicio_3.js"></script>  -->
-    <!--<script src="/Ejercicio_4.js"></script>  -->
+    <script src="/Ejercicio_4.js"></script>  
     <!--<script src="/Ejercicio_5.js"></script>  -->
 
     <!--<script src="/Ejercicio_17.js"></script>  -->
     <!-- <script src="/Ejercicio_perimetro.js"></script> -->
     <!-- <script src="/Ejer_Piedra_papel_tijera.js"></script>  --> 
-    <script src="/ejercicio_prueba.js"></script>
+    <!--<script src="/ejercicio_prueba.js"></script>-->
     
 </body>
 </html>
