--- a/Ejercicios_JS/index.html
+++ b/Ejercicios_JS/index.html
@@ -13,8 +13,19 @@
     <!-- <script src="/Ejercicio_1.js"></script> -->
     <!-- <script src="/Ejercicio_2.js"></script> -->
     <!--<script src="/Ejercicio_3.js"></script>  -->
-    <script src="/Ejercicio_4.js"></script>  
+    <!--<script src="/Ejercicio_4.js"></script>  -->
     <!--<script src="/Ejercicio_5.js"></script>  -->
+    <!--<script src="/Ejercicio_6.js"></script> --> 
+    <!--<script src="/Ejercicio_7.js"></script> -->
+    <!--<script src="/Ejercicio_8.js"></script> -->
+    <script src="/Ejercicio_9.js"></script> 
+    <!--<script src="/Ejercicio_10.js"></script>  -->
+    <!--<script src="/Ejercicio_11.js"></script>  -->
+    <!--<script src="/Ejercicio_12.js"></script>  -->
+    <!--<script src="/Ejercicio_13.js"></script>  -->
+    <!--<script src="/Ejercicio_14.js"></script>  -->
+    <!--<script src="/Ejercicio_15.js"></script>  -->
+    <!--<script src="/Ejercicio_16.js"></script>  -->
 
     <!--<script src="/Ejercicio_17.js"></script>  -->
     <!-- <script src="/Ejercicio_perimetro.js"></script> -->
