Ejercicios 1 al 3 de Array

--- a/Ejercicios_JS/index.html
+++ b/Ejercicios_JS/index.html
@@ -14,7 +14,7 @@
     <!-- <script src="/Ejercicio_2.js"></script> -->
     <!--<script src="/Ejercicio_3.js"></script>  -->
     <!--<script src="/Ejercicio_4.js"></script>  -->
-    <script src="/Ejercicio_5.js"></script> 
+    <!-- <script src="/Ejercicio_5.js"></script>  -->
     <!--<script src="/Ejercicio_6.js"></script> --> 
     <!--<script src="/Ejercicio_7.js"></script> -->
     <!--<script src="/Ejercicio_8.js"></script> -->
@@ -27,6 +27,15 @@
     <!-- <script src="/Ejercicio_15.js"></script>  -->
     <!-- <script src="/Ejercicio_16.js"></script>  -->
     <!-- <script src="/Ejercicio_17.js"></script>  -->
+<!-- <script src="/Ejercicio_array_1.js"></script> -->
+<!-- <script src="/Ejercicio_array_2.js"></script> -->
+<script src="/Ejercicio_array_3.js"></script>
+<!-- <script src="/Ejercicio_func_1.js"></script> -->
+<!-- <script src="/Ejercicio_func_1.js"></script> -->
+<!-- <script src="/Ejercicio_func_2.js"></script> -->
+<!-- <script src="/Ejercicio_func_3.js"></script> -->
+<!-- <script src="/Ejercicio_func_4.js"></script> -->
+
     <!-- <script src="/Ejercicio_perimetro.js"></script> -->
     <!-- <script src="/Ejer_Piedra_papel_tijera.js"></script>  --> 
     <!--<script src="/ejercicio_prueba.js"></script>-->
