termino ejercicios de funciones

--- a/Ejercicios_JS/index.html
+++ b/Ejercicios_JS/index.html
@@ -29,12 +29,11 @@
     <!-- <script src="/Ejercicio_17.js"></script>  -->
 <!-- <script src="/Ejercicio_array_1.js"></script> -->
 <!-- <script src="/Ejercicio_array_2.js"></script> -->
-<script src="/Ejercicio_array_3.js"></script>
-<!-- <script src="/Ejercicio_func_1.js"></script> -->
+<!-- <script src="/Ejercicio_array_3.js"></script> -->
 <!-- <script src="/Ejercicio_func_1.js"></script> -->
 <!-- <script src="/Ejercicio_func_2.js"></script> -->
 <!-- <script src="/Ejercicio_func_3.js"></script> -->
-<!-- <script src="/Ejercicio_func_4.js"></script> -->
+<script src="/Ejercicio_func_4.js"></script>
 
     <!-- <script src="/Ejercicio_perimetro.js"></script> -->
     <!-- <script src="/Ejer_Piedra_papel_tijera.js"></script>  --> 
