cambios en github

--- a/Ejercicios_JS/index.html
+++ b/Ejercicios_JS/index.html
@@ -9,7 +9,6 @@
 <body>
     <!-- Primeros Ejercicios javascript -->
     <!--<script src="Ejercicios.js"></script> --> 
-    <!-- Ejercicio2-1 -->
     <!-- <script src="/Ejercicio_1.js"></script> -->
     <!-- <script src="/Ejercicio_2.js"></script> -->
     <!--<script src="/Ejercicio_3.js"></script>  -->
@@ -27,13 +26,14 @@
     <!-- <script src="/Ejercicio_15.js"></script>  -->
     <!-- <script src="/Ejercicio_16.js"></script>  -->
     <!-- <script src="/Ejercicio_17.js"></script>  -->
-<!-- <script src="/Ejercicio_array_1.js"></script> -->
-<!-- <script src="/Ejercicio_array_2.js"></script> -->
-<!-- <script src="/Ejercicio_array_3.js"></script> -->
-<!-- <script src="/Ejercicio_func_1.js"></script> -->
-<!-- <script src="/Ejercicio_func_2.js"></script> -->
-<script src="/Ejercicio_func_3.js"></script>
-<!-- <script src="/Ejercicio_func_4.js"></script> -->
+    <!-- <script src="/Ejercicio_array_1.js"></script> -->
+    <!-- <script src="/Ejercicio_array_2.js"></script> -->
+    <!-- <script src="/Ejercicio_array_3.js"></script> -->
+    <!-- <script src="/Ejercicio_func_1.js"></script> -->
+    <!-- <script src="/Ejercicio_func_2.js"></script> -->
+    <!-- <script src="/Ejercicio_func_3.js"></script> -->
+    <!-- <script src="/Ejercicio_func_4.js"></script> -->
+    <script src="/Ejer_Piedra_papel_tijera.js"></script> 
 
     <!-- <script src="/Ejercicio_perimetro.js"></script> -->
     <!-- <script src="/Ejer_Piedra_papel_tijera.js"></script>  --> 
